# tonic-repro-1375

./: Cargo.toml  README.md  build.rs
protos/: example.proto
src/: lib.rs  stream_wrapper.rs
