[package]
name = "tonic-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
async-stream = "0.3.5"
fastrand = "1.9.0"
flume = { version = "0.10.14"} # , features = ["spin"] } # Spin doesn't change anything
futures = "0.3.28"
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread", "tokio-macros", "tracing"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.9.2"
